--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ title: 'The Coastal Zone Foundation'
 slogan: 'A resource for costal professionals'
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: 'The Coastal Zone Foundation provides education, organizes conferences, and acts as a resource to Coastal Engineering professionals'
+description: 'The Coastal Zone Foundation provides education, organizes conferences, and acts as a resource to Coastal Engineering professionals.'
 
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
-credits: ''
+# credits: '<p>Created with &hearts; by <a href="http://phlow.de/">Phlow</a> with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
 
 # Main author of the website
 # See > authors.yml
@@ -25,8 +25,8 @@ author: zweishar
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://coastalzonfoundation.org'
-baseurl: '/'
+url: 'https://phlow.github.io'
+baseurl: '/feeling-responsive'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
@@ -105,11 +105,11 @@ compress_html:
 defaults:
   -
     scope:
-      path: '' 				# an empty string here means all files in the project
+      path: ''        # an empty string here means all files in the project
       type: 'pages'
     values:
-      show_meta: false 	# Hide metadata for all pages
-      # sidebar:    		# Possible values › left, right › by default there will be no sidebar
+      show_meta: false  # Hide metadata for all pages
+      # sidebar:        # Possible values › left, right › by default there will be no sidebar
       comments: false
       author: phlow     # Default author for pages
   -
