--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ slogan: 'A resource for costal professionals'
 description: 'The Coastal Zone Foundation provides education, organizes conferences, and acts as a resource to Coastal Engineering professionals.'
 
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
-# credits: '<p>Created with &hearts; by <a href="http://phlow.de/">Phlow</a> with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
+credits: '<p>Thanks to <a href="http://phlow.de/">Phlow</a> for creating our base theme</p>'
 
 # Main author of the website
 # See > authors.yml
