Update image urls

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
   side: left
 
 - title: "Bylaws"
-  url: "/assets/documents/CZFBYLAWSfinal2015.pdf/"
+  url: "/assets/documents/CZFBYLAWSfinal2015.pdf"
   side: left
 
 - title: "Contact"
