--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author: zweishar
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
 url: 'https://czfoundation.github.io'
-baseurl: '/site'
+baseurl: '/public'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
@@ -38,7 +38,7 @@ improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://czfoundation.github.io/site/images/'
+urlimg: 'https://czfoundation.github.io/public/images/'
 
 
 # Logo size is 600x80 pixels
